# x-social-trader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BACKLOG.md  CLAUDE.md  Dockerfile.backend  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260423_1536_initial.py  20260426_0900_trade_journal_view.py
backend/api/: admin_rules.py  health.py  kill_switch.py  main.py  middleware.py
backend/core/: logging.py  metrics.py  redis_client.py  settings.py
backend/db/: session.py
backend/execution/: __init__.py  context.py  executor.py
backend/kill_switch/: __init__.py  service.py
backend/models/: __init__.py  alias.py  base.py  enums.py  event.py  fill.py  kill_switch_event.py  llm_decision.py  order.py  position.py  raw_tweet.py  risk_limit.py  rule_evaluation.py  settings.py  watched_account.py
backend/providers/: __init__.py  base.py  ib.py  openai_compatible.py  twitterapi_io.py
backend/risk/: __init__.py  factory.py  manager.py  market_calendar.py  models.py  rules.py
backend/rules/: __init__.py  engine.py  loader.py  models.py  store.py
backend/services/: aliases.py  ingestion.py  llm_budget.py  llm_pipeline.py  positions_sync.py  rule_pipeline.py  twitterapi_budget.py  watched_accounts_sync.py
backend/workers/: executor_stub.py  ingestion_stub.py  llm_stub.py  telegram_stub.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
ops/grafana/: x-social-trader.json
prompts/: analyzer_v1.md
rules/: example_bullish_swing.yaml
scripts/: seed.py
tests/: conftest.py
tests/integration/: conftest.py  test_aliases.py  test_e2e_paper_golden_path.py  test_executor.py  test_ingestion.py  test_kill_switch.py  test_llm_budget.py  test_llm_pipeline.py  test_positions_sync.py  test_risk_audit.py  test_rules_api.py  test_schema.py  test_triggers.py  test_twitterapi_budget.py  test_watched_accounts_sync.py
tests/mocks/: __init__.py  broker.py  llm.py  social.py
tests/unit/: test_ib_provider.py  test_logging.py  test_market_calendar.py  test_metrics.py  test_middleware.py  test_models.py  test_openai_compatible_provider.py  test_providers.py  test_ready.py  test_risk_manager.py  test_risk_rules.py  test_rules_engine.py  test_rules_loader.py  test_settings.py  test_smoke.py  test_twitterapi_client.py  test_twitterapi_provider.py
